# has-sci

./: .gitignore  README.md  stack.yaml
has-sci-physics/: has-sci-physics.cabal
has-sci-physics-examples/: LICENSE  has-sci-physics-examples.cabal
has-sci-physics-examples/app/: Main.hs
has-sci-physics-examples/src/Physics/Classical/: Examples.hs
has-sci-physics-examples/src/Physics/Quantum/Examples/: HarmonicOscillator.hs
has-sci-physics/src/Physics/: Classical.hs
has-sci-physics/src/Physics/Quantum/: Algebra.hs
