name:                has-sci-physics-examples
version:             0.1.0.0
synopsis:            Examples to compliment has-sci-physics.
description:         Please see README.md
homepage:            https://github.com/sarthakbagaria/has-sci#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria <neokits@gmail.com>
maintainer:          Sarthak Bagaria <neokits@gmail.com>
copyright:           2016 Sarthak Bagaria
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Physics.Classical.Examples

  
  build-depends:       base              >= 4.7   && < 5
                     , has-sci-physics
                     , dimensional       >= 1.0   && < 1.1
                     , gloss             >= 1.10  && < 1.11

  default-language:    Haskell2010

test-suite has-sci-physics-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , has-sci-physics-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/has-sci
