name:                has-sci-physics-examples
version:             0.1.0.0
synopsis:            Examples to compliment has-sci-physics.
description:         Please see README.md
homepage:            https://github.com/sarthakbagaria/has-sci#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria <neokits@gmail.com>
maintainer:          Sarthak Bagaria <neokits@gmail.com>
copyright:           2016 Sarthak Bagaria
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Physics.Classical.Examples
                     , Physics.Quantum.Examples.HarmonicOscillator

  ghc-options:        -Wall -fwarn-tabs -O2
  
  build-depends:       base              >= 4.7   && < 5
                     , has-sci-physics
                     , dimensional       >= 1.0   && < 1.1
                     , gloss             >= 1.10  && < 1.11
                     , algebra           >= 4.3   && < 4.4
                     , containers        >= 0.5.7 && < 0.6
                     , repa              >= 3.4.1 && < 3.5
                     , vector            >= 0.11  && < 0.12
                     , eigen             >= 2.1.6 && < 2.2

  default-language:    Haskell2010

  
executable has-sci-physics-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -prof -fprof-auto

  build-depends:       base
                     , has-sci-physics
                     , has-sci-physics-examples
                     , gloss             >= 1.10  && < 1.11

                     
test-suite has-sci-physics-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , has-sci-physics-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/has-sci
