name:                has-sci-physics
version:             0.1.0.0
synopsis:            Collection of computational methods in physics.
description:         Please see README.md
homepage:            https://github.com/sarthakbagaria/has-sci#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria <neokits@gmail.com>
maintainer:          Sarthak Bagaria <neokits@gmail.com>
copyright:           2016 Sarthak Bagaria
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Physics.Classical
                     , Physics.Quantum.Algebra

  ghc-options:        -Wall -fwarn-tabs -O2                     
  
  build-depends:       base              >= 4.7   && < 5
                     , dimensional       >= 1.0   && < 1.1
                     , numtype-dk        >= 0.5   && < 0.6
                     , algebra           >= 4.3   && < 4.4
                     , containers        >= 0.5.7 && < 0.6
                     , repa              >= 3.4.1 && < 3.5

  default-language:    Haskell2010

  
test-suite has-sci-physics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , has-sci-physics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/has-sci
